# serializer version: 1
# name: test_all_entities[water_heater.model0_domestic_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 60,
      'min_temp': 10,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.model0_domestic_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Domestic hot water',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': <WaterHeaterEntityFeature: 1>,
    'translation_key': 'domestic_hot_water',
    'unique_id': 'gateway0_deviceSerialVitodens300W-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[water_heater.model0_domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'model0 Domestic hot water',
      'max_temp': 60,
      'min_temp': 10,
      'supported_features': <WaterHeaterEntityFeature: 1>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.model0_domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[water_heater.model0_domestic_hot_water_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 60,
      'min_temp': 10,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.model0_domestic_hot_water_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Domestic hot water',
    'platform': 'vicare',
    'previous_unique_id': None,
    'supported_features': <WaterHeaterEntityFeature: 1>,
    'translation_key': 'domestic_hot_water',
    'unique_id': 'gateway0_deviceSerialVitodens300W-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[water_heater.model0_domestic_hot_water_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'model0 Domestic hot water',
      'max_temp': 60,
      'min_temp': 10,
      'supported_features': <WaterHeaterEntityFeature: 1>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.model0_domestic_hot_water_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
